Removed some smells from Evaluator.